--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,11 @@
 .header__navbar-item {
     margin: 0 8px;
     position: relative;
+    min-height: 26px;
+}
+
+.has-qr:hover .header__qr{
+    display: block;
 }
 
 .header__navbar-item,
@@ -26,7 +31,15 @@
     font-weight: 300;
 }
 
+.header__navbar-item,
+.header__navbar-item-link,
+.header__navbar-icon {
+    display: inline-flex;
+    align-items: center;
+}
+
 .header__navbar-item:hover,
+.header__navbar-icon:hover,
 .header__navbar-item-link:hover {
     color: rgba(255, 255, 255, 0.7);
     cursor: pointer;
@@ -48,4 +61,70 @@
 .header__navbar-icon-link {
     color: var(--white-color);
     text-decoration: none;
+}
+
+.header__navbar-icon {
+    font-size: 1.8rem;
+    margin: 0 4px;
+}
+
+.header__navbar-item-title {
+    cursor: text;
+    color: var(--white-color);
+}
+
+
+/* Header QR code */
+.header__qr {
+    background-color: var(--white-color);
+    width: 186px;
+    position: absolute;
+    top: 120%;
+    left: 0;
+    border: 1px solid #dbdbdb;
+    border-radius: 4px;
+    padding: 8px;
+    display: none;
+    animation: fadeIn ease-in 0.5s;
+}
+
+.header__qr::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    display: block;
+    left: 0;
+    top: -15px;
+    height: 20px;
+    display: block;
+}
+
+.header__qr-img {
+    width: 100%;
+}
+
+.deader__app {
+    display: flex;
+}
+.header__qr-link:nth-child(1) {
+    margin-left: 11px;
+}
+.header__qr-link:nth-child(2    ) {
+    margin-left: 11px;
+}
+
+.header__app-download {
+    height: 15px;
+}
+
+
+/* Animation */
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
