--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@
 .header__navbar-list {
     list-style: none;
     padding-left: 0;
-    margin-top: 4px;
+    margin-top: 4px 0 0 0;
 }
 
 .header__navbar-item {
@@ -216,6 +216,121 @@
     text-align: center;
 }
 
+
+.header-with-search {
+    height: var(--header-with-search-height);
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.header__logo {
+    width: 200px;
+}
+.header__logo-img {
+    width: 150px;
+    fill: var(--white-color);
+}
+
+.header__search {
+    background-color: var(--white-color);
+    height: 40px;
+    flex: 1;
+    border-radius: 2px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+.search__input-wrap{
+    flex: 1;
+    height: 100%;
+    position: relative;
+}
+
+.header__search-input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.4rem;
+    padding: 0 10px;
+}
+
+.header__search-select {
+    display: flex;
+    width: 150px;
+    align-items: center;
+    padding-left: 10px;
+    cursor: pointer;
+}
+.header__search-select:hover .select-options {
+    display: block;
+}
+
+.select-options {
+    position: absolute;
+    width: 105px;
+    z-index: 3;
+    top: 100px;
+    background-color: var(--white-color);
+    padding-left: 0;
+    list-style: none;
+    box-shadow: 0 1px 2px rgb(216 216 216);
+    border-radius: 3px;
+    animation: fadeIn ease-in 0.2s;
+    padding: 5px 15px;
+    margin-bottom: 0px;
+    display: none;
+}
+
+.select-options::before {
+    content: "";
+    width: 105px;
+    height: 6px;
+    background-color: transparent;
+    position: absolute;
+    top: -6px;
+    right: 0;
+}
+
+.select-item {
+    font-size: 1.3rem;
+    line-height: 1.6;
+}
+
+.select-label {
+    font-size: 1.3rem;
+    padding-right: 10px;
+    border-left: 1px solid #ccc;
+    padding-left: 15px;
+}
+.select-label-icon {
+    font-size: 1.3rem;
+    color: var(--primary-color);
+}
+.header__cart {
+    width: 150px;
+    text-align: center;
+}
+.header__cart-icon {
+    color: var(--white-color);
+    font-size: 2.4rem;
+}
+
+.header__search-btn {
+    height: 34px;
+    width: 60px;
+    outline: none;
+    border: none;
+    background-color: var(--primary-color);
+    border-radius: 3px;
+    margin: 3px 2px;
+    cursor: pointer;
+}
+.header__search-btn-icon {
+    color: var(--white-color);
+    font-size: 1.4rem;
+}
 /* Animation */
 
 @keyframes fadeIn {
