--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -33,6 +33,20 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -12px;
+    margin-right: -12px;
+}
+
+.grid__column-2 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 16.6667%;
+}
+
+.grid__column-10     {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 83.3333%;
 }
 
 /* CSS Modal overlay */
@@ -130,13 +144,10 @@ html {
     background-color: transparent;
 }
 
-.btn:hover {
-    background-color: gray;
-}
-
 .btn-primary {
     background-color: var(--primary-color);
     color: var(--white-color);
+    font-size: 1.3rem;
 }
 
 .auth__socials {
