--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,7 +96,6 @@
     left: 0;
     top: -15px;
     height: 20px;
-    display: block;
 }
 
 .header__qr-img {
@@ -134,6 +133,7 @@
     transform-origin: top right;
     will-change: opacity;
     display: none;
+    z-index: 1;
 }
 
 .header__notify::before {
@@ -329,6 +329,175 @@
 }
 .header__search-btn-icon {
     color: var(--white-color);
+    font-size: 1.4rem;
+}
+
+
+.container {
+    background-color: #dbdbdb;
+}
+
+.category {
+    background-color: var(--white-color);
+    margin-top: 20px;
+    border-radius: 3px;
+}
+.category__heading {
+    padding-left: 15px;
+    padding-top: 20px;
+    font-size: 2.0rem;
+    border-bottom: 1px solid #dbdbdb;
+    margin-bottom: 0px;
+    padding-bottom: 15px;
+}
+
+.category__heading-icon {
+    font-size: 2.0rem;
+    padding-right: 10px;
+}
+
+.category-list {
+    list-style: none;
+    padding: 0;
+    padding-left: 15px;
+    font-size: 1.5rem;
+    margin-top: 5px;
+}
+
+.category-item {
+    line-height: 1.5;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.category-item__link {
+    text-decoration: none;
+    padding-left: 10px;
+    color: var(--black-color);
+    position: relative;
+}
+.category-item__link:hover {
+    color: var(--primary-color);
+    margin-left: 5px;
+}
+.category-item__active .category-item__link::before {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    content: "";
+    border: 5px solid;
+    border-color: transparent transparent transparent var(--primary-color);
+    transform: translateY(-50%);
+}
+.category-item__active .category-item__link {
+    color: var(--primary-color);
+}
+
+/* Home page filter */
+
+.home__filter {
+    margin-top: 20px;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.04);
+    border-radius: 2px;
+    padding: 12px 22px;
+}
+.home__filter-label {
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+.btn_popular {
+    background-color: var(--white-color);
+    font-size: 1.3rem;
+    border: none;
+}
+.btn_popular:hover {
+    background-color: var(--white-color);
+}
+
+.filter__select-input {
+    margin-left: 15px;
+    min-width: 200px;
+    background-color: var(--white-color);
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+.filter__select-input:hover .filter-sort{
+    display: block;
+}
+
+.filter-sort {
+    list-style: none;
+    background-color: var(--white-color);
+    position: absolute;
+    width: 100%;
+    top: 25px;
+    padding: 10px;
+    border-radius: 2px;
+    display: none;
+    animation: fadeIn ease-in 0.3s ;
+}
+
+.filter-sort::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 15px;
+    background-color: transparent;
+    left: 0;
+    top: -15px;
+    background-color: transparent;
+}
+
+.item-sort {
+    font-size: 1.4rem;
+    color: var(--text-color);
+    line-height: 1.5;
+    cursor: pointer;
+}
+.item-sort:hover {
+    color: var(--primary-color);
+}
+
+.select-input-label {
+    font-size: 1.4rem;
+    padding-left: 10px;
+}
+
+.select-input-icon {
+    padding-right: 10px;
+    font-size: 1.3rem;
+    color: var(--text-color);
+    cursor: pointer;
+}
+
+.home-filter__page {
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.home-filter__page-btn {
+    text-decoration: none;
+    font-size: 1.3rem;
+    background-color: var(--white-color);
+    padding: 10px;
+    margin: 1px;
+}
+
+.page-number {
+    color: var(--primary-color);
+}
+
+.home-filter__page-number {
+    margin-right: 20px;
     font-size: 1.4rem;
 }
 /* Animation */
